# video-simili-duplicate-cleaner

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  AppIcon.icns  CHANGELOG.md  CREDITS.md  CreateICNS.txt  DEPENDENCIES.md  DEPLOY.md  README-VCPKG-MIGRATION.md  README.md  ROADMAP.md  VCPKG-INTEGRATION-SUMMARY.md  WINDOWS-CMAKE-SETUP.md  _config.yml  comparison.cpp  comparison.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  package.json  readme.md  update-appxmanifest-version.js  update-plist-version.js  vcpkg-configuration.json  vcpkg.json  video.cpp  video.h  vidupe.pro  vidupe.qrc
.cursor/: hooks.json
QtProject/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  comparison.cpp  comparison.h  comparison.ui  db.cpp  extensions.ini  ffmpeg.h  files.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  prefs.h  similiar-and-duplicate-videos-finder.pro  vcpkg.json  video-simili-duplicate-cleaner.pro  video-simili-duplicate-cleaner.pro.user.dd3277b  video.cpp  video.h  vidupe.pro
QtProject-cmake-subdirs/video-simili-duplicate-cleaner/test_video/: CMakeLists.txt  tst_test_video.cpp
QtProject/app/: app.pro  common.pri  comparison.cpp  comparison.h  comparison.ui  db.cpp  db.h  extensions.ini  ffmpeg.h  files.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  obj-c.h  obj-c.mm  prefs.cpp  prefs.h  ssim.cpp  thumbnail.h  tst_video.cpp  video-simili-duplicate-cleaner.pro.user.bak  video.cpp  video.h  videometadata.h  videoprocessingpool.cpp  videoprocessingpool.h
QtProject/app/libraries/ffmpeg/lib/pkgconfig/: libswresample.pc  libswscale.pc
QtProject/app/libraries/opencv/lib/cmake/opencv4/: OpenCVModules-release.cmake
QtProject/app/libraries/opencv/lib/pkgconfig/: opencv4.pc
QtProject/app/release-build/: package.json
QtProject/cmake/: FindFFMPEG.cmake
QtProject/libraries/ffmpeg/include/libavutil/: ffversion.h
QtProject/libraries/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc
QtProject/libraries/macos/: .gitignore
QtProject/libraries/macos/ffmpeg/: ffmpeg.sh
QtProject/libraries/macos/ffmpeg-arm/ffmpeg-universalized-libs/lib/pkgconfig-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
QtProject/libraries/macos/ffmpeg-arm/ffmpeg-universalized-libs/lib/pkgconfig-x86_64-from-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
QtProject/libraries/macos/ffmpeg-universalized-libs/: .gitignore
QtProject/libraries/macos/ffmpeg-universalized-libs/lib/pkgconfig-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libswresample.pc  libswscale.pc
QtProject/libraries/macos/ffmpeg-universalized-libs/lib/pkgconfig-x86_64-from-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libswresample.pc
QtProject/libraries/macos/ffmpeg/ffmpeg-universalized-libs/include/libavutil/: ffversion.h
QtProject/libraries/macos/ffmpeg/ffmpeg-universalized-libs/lib/pkgconfig-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
QtProject/libraries/macos/ffmpeg/ffmpeg-universalized-libs/lib/pkgconfig-x86_64-from-arm/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
QtProject/libraries/macos/ffmpeg/libaom-universalized/lib/pkgconfig-arm/: aom.pc
QtProject/libraries/macos/ffmpeg/libaom-universalized/lib/pkgconfig-x86_64-from-arm/: aom.pc
QtProject/libraries/macos/libaom-universalized/lib/pkgconfig-x86_64-from-arm/: aom.pc
QtProject/libraries/macos/opencv-arm/: opencv.sh
QtProject/libraries/macos/opencv-arm/opencv-install/include/opencv4/opencv2/: cvconfig.h
QtProject/libraries/macos/opencv-arm/opencv-install/lib/cmake/opencv4/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
QtProject/libraries/macos/opencv-arm/opencv-install/lib/pkgconfig/: opencv4.pc
QtProject/libraries/macos/opencv-arm/opencv_install/lib/pkgconfig/: opencv4.pc
QtProject/libraries/macos/opencv/include/opencv2/: cvconfig.h
QtProject/libraries/macos/qt/: .gitignore  qt.sh
QtProject/libraries/opencv/lib/cmake/opencv4/: OpenCVModules.cmake
QtProject/libraries/windows/ffmpeg/lib/: avdevice.lib  avfilter.lib  postproc.lib  swresample.lib  swscale.lib
QtProject/libraries/windows/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc
QtProject/libraries/windows/opencv/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  zlib.lib  zlibd.lib
QtProject/release-build/: Info.plist  package.json  parent.plist
QtProject/release-build/macos/: Info.plist  package.json  parent.plist
QtProject/release-build/windows/: appxmanifest.template.xml  appxmanifest.xml  package.json  process-manifest-template.js
QtProject/tests/: .gitignore  CMakeLists.txt  TestHelpers.cpp  helpers.h  tests.csv  tests.pro  tst_video.cpp
QtProject/tests/ressources/: Nice_383p_500kbps.thumbnail  Nice_720p_1000kbps.thumbnail
QtProject/tests/test_auto_delete/: tst_auto_delete.cpp
QtProject/tests/test_comparison/: test_comparison.pro  tst_test_comparison.cpp
QtProject/tests/test_end_to_end/: CMakeLists.txt  README.md  TEST_SETUP_SUMMARY.md  setup_and_build.sh  test_end_to_end.cpp  test_helpers.cpp  test_helpers.h
QtProject/tests/test_mainwindow/: test_mainwindow.pro  tst_mainwindow.cpp
QtProject/tests/test_video/: migrate_csv_to_individual_metadata.cpp  tst_video.cpp  video_test_helpers.cpp  video_test_helpers.h
QtProject/tests/test_video/ressources/: tests-cached.csv  tests.csv
QtProject/tests/test_video_simplified/: README.md  generate_reference_data.cpp  tst_video_simplified.cpp  video_simplified_test_helpers.cpp  video_simplified_test_helpers.h
QtProject/tests/test_video_simplified/reference_data/: Nice_383p_500kbps.mp4.txt
scripts/: build-windows.ps1  (+2 more)
(+68 files in other folders)
